--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>Region</title>
-	<link rel="shortcut icon" href="https://www.google.com/a/globant.com/images/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="https://material.angularjs.org/latest/img/icons/angular-logo.svg" type="image/x-icon">
 	<link rel="stylesheet" href="assets/css/angular-material.min.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/fontawesome/css/font-awesome.min.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/ngGallery.css" type="text/css">
