--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
 	<script src="app/main/main.js"></script>
 	<script src="app/main/main.controller.js"></script>
 	<script src="app/services/Canvas.js"></script>
+	<script src="app/main/SimpleShapes.Controller.js"></script>
+	<script src="app/services/SimpleShapes.js"></script>
 
 </body>
 </html>
