--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,6 @@
 
 	<script src="app/main/main.js"></script>
 	<script src="app/main/main.controller.js"></script>
+	<script src="app/services/Canvas.js"></script>
 </body>
 </html>
