image changer on next and previous button

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 	<script src="app/main/main.js"></script>
 	<script src="app/main/main.controller.js"></script>
 	<script src="app/services/Canvas.js"></script>
-	<!-- <script src="app/services/savefile_services.js"></script> -->
+	<script src="app/services/savefile_services.js"></script>
 	<!-- <script src="app/services/savefile_resource.js"></script> -->
 </body>
 </html>
