--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
 
 	<script src="assets/vendor/jquery.min.js"></script>
+	<script src="assets/vendor/jquery.easing.1.3.js"></script>
 	<script src="assets/vendor/angular.min.js"></script>
 	<script src="assets/vendor/angular-animate.min.js"></script>
 	<script src="assets/vendor/angular-aria.min.js"></script>
@@ -38,7 +39,7 @@
 	<script src="app/main/main.js"></script>
 	<script src="app/main/main.controller.js"></script>
 	<script src="app/services/Canvas.js"></script>
+	<script src="app/services/savefile_resource.js"></script>
 	<script src="app/services/savefile_services.js"></script>
-	<!-- <script src="app/services/savefile_resource.js"></script> -->
 </body>
 </html>
