get data from json

--- a/src/index.html
+++ b/src/index.html
@@ -31,15 +31,15 @@
 	<script src="assets/vendor/angular-aria.min.js"></script>
 	<script src="assets/vendor/angular-material.min.js"></script>
 	<script src="assets/vendor/angular-ui-router.min.js"></script>
+	<script src="assets/vendor/angular-resource.min.js"></script>
 	<script src="assets/vendor/ngGallery.js"></script>
 	<script src="assets/vendor/jquery.jcarousellite.min.js"></script>
 	<script src="assets/vendor/jquery-ui.js"></script>
 	<script src="assets/vendor/fabric.min.js"></script>
 
 	<script src="app/main/main.js"></script>
-	<script src="app/main/main.controller.js"></script>
-	<script src="app/services/Canvas.js"></script>
 	<script src="app/services/savefile_resource.js"></script>
 	<script src="app/services/savefile_services.js"></script>
+	<script src="app/main/main.controller.js"></script>
 </body>
 </html>
