show regions done

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 	    	<div ui-view></div>
 	    </div>
 	</section>
-	<toaster-container toaster-options="{'time-out': 3000, 'close-button':true}"></toaster-container>
+	<toaster-container></toaster-container>
 
 
 	<script src="assets/vendor/jquery.min.js"></script>
