create directive for loading

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
 	<script src="assets/vendor/fabric.min.js"></script>
 
 	<script src="app/main/main.js"></script>
+	<script src="app/directives/region.directives.js"></script>
 	<script src="app/services/savefile_resource.js"></script>
 	<script src="app/services/savefile_services.js"></script>
 	<script src="app/main/main.controller.js"></script>
