--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 
 	<script src="app/main/main.js"></script>
 	<script src="app/directives/loadingbar.directives.js"></script>
+	<script src="app/directives/draggable.directives.js"></script>
 	<script src="app/services/savefile_resource.js"></script>
 	<script src="app/services/savefile_services.js"></script>
 	<script src="app/main/main.controller.js"></script>
