--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 	<script src="assets/vendor/angular.min.js"></script>
 	<script src="assets/vendor/angular-animate.min.js"></script>
 	<script src="assets/vendor/angular-aria.min.js"></script>
+	<script src="assets/vendor/angular-messages.min.js"></script>
 	<script src="assets/vendor/angular-material.min.js"></script>
 	<script src="assets/vendor/angular-ui-router.min.js"></script>
 	<script src="assets/vendor/angular-resource.min.js"></script>
