next previous implemented

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>Region</title>
-	<link rel="shortcut icon" href="https://material.angularjs.org/latest/img/icons/angular-logo.svg" type="image/x-icon">
+	<title>Papionne</title>
+	<link rel="shortcut icon" href="http://papionne.com/favicon.ico">
 	<link rel="stylesheet" href="assets/css/angular-material.min.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/fontawesome/css/font-awesome.min.css" type="text/css">
-	<link rel="stylesheet" href="assets/css/ngGallery.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/jquery.jcarousellite.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/mainstyle.css" type="text/css">
 </head>
@@ -32,8 +31,8 @@
 	<script src="assets/vendor/angular-material.min.js"></script>
 	<script src="assets/vendor/angular-ui-router.min.js"></script>
 	<script src="assets/vendor/angular-resource.min.js"></script>
-	<script src="assets/vendor/ngGallery.js"></script>
-	<script src="assets/vendor/jquery.jcarousellite.min.js"></script>
+	<script src="assets/vendor/angular-lazy-loader.min.js"></script>
+	<!-- <script src="assets/vendor/jquery.jcarousellite.min.js"></script> -->
 	<script src="assets/vendor/jquery-ui.js"></script>
 	<script src="assets/vendor/fabric.min.js"></script>
 
