added image preloader

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>Papionne</title>
 	<link rel="shortcut icon" href="http://papionne.com/favicon.ico">
+	<title>Papionne</title>
 	<link rel="stylesheet" href="assets/css/angular-material.min.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/fontawesome/css/font-awesome.min.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/jquery.jcarousellite.css" type="text/css">
@@ -17,13 +16,12 @@
 	<section class="main-view-page">
 	    <!-- THIS IS WHERE WE WILL INJECT OUR CONTENT ============================== -->
 	    <div class="page-row">
-	    	<div ui-view></div>
+	    	<div ui-view> </div>
 	    </div>
 	</section>
 	<toaster-container></toaster-container>
 
 	<script src="assets/vendor/jquery.min.js"></script>
-	<script src="assets/vendor/jquery.easing.1.3.js"></script>
 	<script src="assets/vendor/angular.min.js"></script>
 	<script src="assets/vendor/angular-animate.min.js"></script>
 	<script src="assets/vendor/angular-aria.min.js"></script>
@@ -31,14 +29,14 @@
 	<script src="assets/vendor/angular-material.min.js"></script>
 	<script src="assets/vendor/angular-ui-router.min.js"></script>
 	<script src="assets/vendor/angular-resource.min.js"></script>
-	<script src="assets/vendor/angular-lazy-loader.min.js"></script>
-	<!-- <script src="assets/vendor/jquery.jcarousellite.min.js"></script> -->
 	<script src="assets/vendor/jquery-ui.js"></script>
 	<script src="assets/vendor/fabric.min.js"></script>
 
 	<script src="app/main/main.js"></script>
 	<script src="app/directives/loadingbar.directives.js"></script>
 	<script src="app/directives/draggable.directives.js"></script>
+	<script src="assets/vendor/angular-lazy-loader.min.js"></script>
+	<!-- <script src="app/directives/resize.directives.js"></script> -->
 	<script src="app/services/savefile_resource.js"></script>
 	<script src="app/services/savefile_services.js"></script>
 	<script src="app/main/main.controller.js"></script>
