--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
 	<script src="assets/vendor/angular-resource.min.js"></script>
 	<script src="assets/vendor/jquery-ui.js"></script>
 	<script src="assets/vendor/fabric.min.js"></script>
+	<script src="assets/vendor/underscore-min.js"></script>
 
 	<script src="app/main/main.js"></script>
 	<script src="app/directives/loadingbar.directives.js"></script>
